[package]
name = "rtsk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
clap = { version = "4.3.11", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
tabled = { version = "0.12.2", features = ["color"] }
colored = "2.0.4"
